DuPont DevSB/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Accounting</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CSR</fullName>
        <description>CSR</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inquiry Management</fullName>
        <description>Added with Inquiry Mgmt and Communities POC to ensure a contained process with custom Record Type with simplified Layout could be used to separate these Inquiries from a standard or more complex Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_One_time_customer_only__c</fullName>
        <label>Address (One-time customer only)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Company_Code__c</fullName>
        <label>Bill Company Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_I_C_Services__c</fullName>
        <label>Bill I/C Services</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Company_Code__c</fullName>
        <label>Billing Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CH02  DUP INTL OPERATIONS</fullName>
                </value>
                <value>
                    <fullName>TW03  DTT TAIWAN</fullName>
                </value>
                <value>
                    <fullName>US02  E.I.DuPont and Co.</fullName>
                </value>
                <value>
                    <fullName>MX02  DuPont Mexico S.A. de C.V</fullName>
                </value>
                <value>
                    <fullName>CH03  DUP INTL SARL</fullName>
                </value>
                <value>
                    <fullName>TW02  DuPont Taiwan Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Owner_Change_Reason_Code__c</fullName>
        <description>This field was added for the Inquiry Mgmt and Communities POC to demonstrate how a picklist field could be included in a Quick Action to change Case Owner</description>
        <label>Case Owner Change Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reason 1</fullName>
                </value>
                <value>
                    <fullName>Reason 2</fullName>
                </value>
                <value>
                    <fullName>Reason 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Owner_Change_Reason__c</fullName>
        <description>This field was created for the Inquiry Mgmt and Communities POC to show how a Quick Action could enable efficient transfer of Case record ownership and also provide for trackable changes</description>
        <label>Case Owner Change Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CH02  DUP INTL OPERATIONS</fullName>
                </value>
                <value>
                    <fullName>TW03  DTT TAIWAN</fullName>
                </value>
                <value>
                    <fullName>US02  E.I.DuPont and Co.</fullName>
                </value>
                <value>
                    <fullName>MX02  DuPont Mexico S.A. de C.V</fullName>
                </value>
                <value>
                    <fullName>CH03  DUP INTL SARL</fullName>
                </value>
                <value>
                    <fullName>TW02  DuPont Taiwan Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_CopyControl__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cust_CopyControl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Numbers__c</fullName>
        <label>Customer Numbers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_from__c</fullName>
        <label>Date from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to__c</fullName>
        <label>Date to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Choose the department that the xcase is related to.</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>DLF Decision Board</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>External Forwarder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalate_to__c</fullName>
        <label>Escalate to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Specialist</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>MDG Group</fullName>
                </value>
                <value>
                    <fullName>SH&amp;E</fullName>
                </value>
                <value>
                    <fullName>CSR Operations Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Field added for Inquiry Mgmt and Communities POC to capture First Name of Inquirer via Community separate from last name.  This allows for First and Last Name to be passed to an auto-created Lead&apos;s separate fields for First and Last Names</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_to__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact to Future Business Processes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intermediate_Business_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intermediate Business Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Details__c</fullName>
        <label>Issue Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_ShorT_Description__c</fullName>
        <label>Issue Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Field added for Inquiry Mgmt and Communities POC to capture Last Name of Inquirer via Community separate from first name. This allows for First and Last Name to be passed to an auto-created Lead&apos;s separate fields for First and Last Names</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup to Lead was added for the Inquiry Mgmt and Communities POC to show how a Case (i.e. Inquiry) could be related to an existing or newly created Lead if no Contact existed when the Case was created</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Material_Number_s__c</fullName>
        <label>Material Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Modify_Customer__c</fullName>
        <label>Modify Customer</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modify_Material__c</fullName>
        <label>Modify Material</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Near_Term_Business_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Near Term Business Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <inlineHelpText>Complete this field when the case is in regards an Order.</inlineHelpText>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the SAP Order Number or the Document Number</description>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FS&amp;RE Research</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Utilities (Electricity, Water works etc.)</fullName>
                </value>
                <value>
                    <fullName>Tolling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receiving_Company_Code__c</fullName>
        <label>Receiving Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TW03 DTT TAIWAN</fullName>
                </value>
                <value>
                    <fullName>US02 E.I.DuPont and Co.</fullName>
                </value>
                <value>
                    <fullName>MX02 DuPont Mexico S.A. de C.V</fullName>
                </value>
                <value>
                    <fullName>CH03 DUP INTL SARL</fullName>
                </value>
                <value>
                    <fullName>TW02 DuPont Taiwan Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Callback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Callback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Rebate__c</fullName>
        <label>Request Rebate</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Sample__c</fullName>
        <label>Request Sample</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Transfer_Price__c</fullName>
        <label>Request Transfer Price</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Investigation__c</fullName>
        <label>SAP Investigation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sending_Company_Code__c</fullName>
        <label>Sending Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TW03 DTT TAIWAN</fullName>
                </value>
                <value>
                    <fullName>US02 E.I.DuPont and Co.</fullName>
                </value>
                <value>
                    <fullName>MX02 DuPont Mexico S.A. de C.V</fullName>
                </value>
                <value>
                    <fullName>CH03 DUP INTL SARL</fullName>
                </value>
                <value>
                    <fullName>TW02 DuPont Taiwan Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_Service_Center__c</fullName>
        <label>Shared Service Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
                <value>
                    <fullName>Wilmington</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Genk</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Mexico City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer: Change Existing</fullName>
                </value>
                <value>
                    <fullName>Hybris: New Customer</fullName>
                </value>
                <value>
                    <fullName>End of Consignment</fullName>
                </value>
                <value>
                    <fullName>Investigate Delivery</fullName>
                </value>
                <value>
                    <fullName>New Business Requirement</fullName>
                </value>
                <value>
                    <fullName>Problem with Sales Order</fullName>
                </value>
                <value>
                    <fullName>Warehouse Follow-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>Select a Subtype that most closely relates to the Type.</description>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Enhancement_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Enhancement Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Systems_Affected__c</fullName>
        <label>Systems Affected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CP1</fullName>
                </value>
                <value>
                    <fullName>WP1</fullName>
                </value>
                <value>
                    <fullName>GP1</fullName>
                </value>
                <value>
                    <fullName>TP1</fullName>
                </value>
                <value>
                    <fullName>EP1</fullName>
                </value>
                <value>
                    <fullName>ECC</fullName>
                </value>
                <value>
                    <fullName>Hybris</fullName>
                </value>
                <value>
                    <fullName>SFDC Service Cloud</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>KP1</fullName>
                </value>
                <value>
                    <fullName>MDG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbu__c</fullName>
        <label>SBU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A3 N&amp;H</fullName>
                </value>
                <value>
                    <fullName>A6 BI</fullName>
                </value>
                <value>
                    <fullName>B9 DPP</fullName>
                </value>
                <value>
                    <fullName>D6 DPT</fullName>
                </value>
                <value>
                    <fullName>F4 E&amp;C (excl. MCM)</fullName>
                </value>
                <value>
                    <fullName>F8 DCP</fullName>
                </value>
                <value>
                    <fullName>G2 P&amp;IP</fullName>
                </value>
                <value>
                    <fullName>I4 DSS</fullName>
                </value>
                <value>
                    <fullName>K7 PIONEER</fullName>
                </value>
                <value>
                    <fullName>K8 IB</fullName>
                </value>
                <value>
                    <fullName>M4 E&amp;C MCM</fullName>
                </value>
                <value>
                    <fullName>99 Intercompany</fullName>
                </value>
                <value>
                    <fullName>00 Non-Aligned</fullName>
                </value>
                <value>
                    <fullName>AA All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>sbu__c</columns>
        <columns>Company_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>CSR_Level_2</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CSR Level 2</label>
        <queue>CSR_Level_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Accounting</fullName>
        <active>true</active>
        <businessProcess>Accounting</businessProcess>
        <description>Used to create case for Inter-Company Cedits/Debits</description>
        <label>Bill I/C Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expedite_Request</fullName>
        <active>true</active>
        <businessProcess>CSR</businessProcess>
        <description>When customers require to expedite an order</description>
        <label>Expedite Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inquiry_Management</fullName>
        <active>true</active>
        <businessProcess>Inquiry Management</businessProcess>
        <description>Added with Inquiry Mgmt and Communities POC to ensure a contained process with custom Record Type with simplified Layout could be used to separate these Inquiries from a standard or more complex Case</description>
        <label>Inquiry Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Modify_Material</fullName>
        <active>true</active>
        <businessProcess>CSR</businessProcess>
        <description>Used to create case to Create or Change Material data</description>
        <label>Modify Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>Modify_SAP</fullName>
        <active>true</active>
        <businessProcess>CSR</businessProcess>
        <description>Used to create case to resolve SAP Process or Data issues</description>
        <label>SAP Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Rebate</fullName>
        <active>true</active>
        <businessProcess>CSR</businessProcess>
        <description>Used to create case to Request Rebate</description>
        <label>Request Rebate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Sample</fullName>
        <active>true</active>
        <businessProcess>CSR</businessProcess>
        <description>Used to create case to Request Sample(s)</description>
        <label>Request Sample</label>
    </recordTypes>
    <recordTypes>
        <fullName>Used_to_cre_tr</fullName>
        <active>true</active>
        <businessProcess>CSR</businessProcess>
        <description>Used to create case to Request Transfer Price</description>
        <label>Request Transfer Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>modify_customer</fullName>
        <active>true</active>
        <businessProcess>CSR</businessProcess>
        <description>Used to create case to Create or Change Customer data</description>
        <label>Modify Customer</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Case_Owner_Change_Reason_Required</fullName>
        <active>true</active>
        <description>Added with Inquiry Mgmt and Communities POC.  Requires the Case Owner Change Reason text field be updated if the Case Owner is changed and Owner Change Reason field is not updated from the prior value.</description>
        <errorConditionFormula>NOT(ISBLANK(PRIORVALUE(Case_Owner_Change_Reason__c)))
&amp;&amp;
ISCHANGED(OwnerId)
&amp;&amp;
Case_Owner_Change_Reason__c = (PRIORVALUE(Case_Owner_Change_Reason__c))</errorConditionFormula>
        <errorDisplayField>Case_Owner_Change_Reason__c</errorDisplayField>
        <errorMessage>You must update the Case Owner Change Reason to complete this change.</errorMessage>
    </validationRules>
</CustomObject>